2012-10-10  Borut Razem  <borutr@users.sourceforge.net>
  * evaluate.c: fixed list_length() for cases where tail of the list is
    not a list; MPASM(X) compatible shift operations in mpasm
    compatibility mode
  * doc/gputils.lyx: documented MPASM(X) compatible shift operations in mpasm
    compatibility mode

2012-09-17  Molnar Karoly  <borutr@users.sourceforge.net>
  * lkr/16f73_g.lkr: The repair of repair.

2012-09-17  Molnar Karoly  <borutr@users.sourceforge.net>
  * lkr/12c509_g.lkr, lkr/12c509a_g.lkr, lkr/12ce519_g.lkr,
    lkr/12cr509a_g.lkr, lkr/16c505_g.lkr, lkr/16f73_g.lkr,
    lkr/16f74_g.lkr, lkr/16f873_g.lkr, lkr/16f873a_g.lkr,
    lkr/16f874_g.lkr, lkr/16f874a_g.lkr, lkr/16f1786_g.lkr,
    lkr/16f1787_g.lkr, lkr/16lf1786_g.lkr, lkr/16lf1787_g.lkr,
    lkr/18c601_g.lkr, lkr/rf509af_g.lkr, lkr/rf509ag_g.lkr:
    Uniform gputils comments.

2012-09-16  Borut Razem  <borutr@users.sourceforge.net>
  * doc/html-doc/Makefile.am, doc/html-doc/Makefile.in, configure.am,
    configure: fixed make dist

2012-09-15  Borut Razem  <borutr@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/gpasm.c, gpasm/gpasm.h.in,
    gpasm/testsuite/test: 
    introdiced --mpasm-compatible command line option
  * gpasm/lst.c, gpasm/coff.c: fixed #255 Bug #227 regressed

2012-09-14  Molnar Karoly  <proton7@freemail.hu>
  * doc/html-help/Makefile.am, doc/html-help/Makefile.in:
    Renamed the config-help.pl to device-help.pl.

2012-09-14  Molnar Karoly  <proton7@freemail.hu>
  * lkr/16f873_g.lkr, lkr/16f873a_g.lkr, lkr/16f874_g.lkr,
    lkr/16f874a_g.lkr: Added "NAME=gpr[0-2]" sections. Added the new
    "#IFDEF _DEBUGDATASTART" section. Changed more lines in the
    original "#IFDEF _DEBUGDATASTART" section.

2012-09-14  Molnar Karoly  <proton7@freemail.hu>
  * lkr/16f73_g.lkr, lkr/16f74_g.lkr: Changed the "NAME=sfr2" and
    "NAME=sfr3" sections. Added the new "#IFDEF _DEBUGDATASTART" section.
    Changed more lines in the original "#IFDEF _DEBUGDATASTART" section.
