@@ -30,8 +30,6 @@ void lst_init(void);
 void lst_memory_map(MemBlock *m);
 void lst_close(void);
 void lst_format_line(const char *line, int value);
-
-void lst_symbol_table(struct symbol_table *);
-void lst_defines_table(struct symbol_table *);
+void lst_symbol_table(void);
 
 #endif
